[gd_scene load_steps=15 format=3 uid="uid://d4cpj11iha5uc"]

[ext_resource type="Script" uid="uid://buap128n0gj" path="res://Maps/Scripts/GameMode.gd" id="1_bliyt"]
[ext_resource type="Texture2D" uid="uid://biec8m2uv843c" path="res://Textures/texture_03.png" id="2_d7oxw"]
[ext_resource type="Texture2D" uid="uid://cwcexiteh4s2q" path="res://Textures/texture_02purpl.png" id="3_l8b2n"]
[ext_resource type="Texture2D" uid="uid://d0u76ui7ag1at" path="res://Textures/texture_02.png" id="4_abnra"]
[ext_resource type="Script" uid="uid://de4ax627pkk2y" path="res://Maps/Scripts/PauseMenu.gd" id="5_d7oxw"]
[ext_resource type="PackedScene" uid="uid://dg5h0ninwhwge" path="res://Weapons/Pistol/DroppedPistol.tscn" id="6_l8b2n"]

[sub_resource type="BoxMesh" id="BoxMesh_r2ywu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bliyt"]
albedo_texture = ExtResource("2_d7oxw")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_x14v3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d7oxw"]
albedo_texture = ExtResource("3_l8b2n")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l8b2n"]
albedo_texture = ExtResource("4_abnra")
rim_tint = 1.0
clearcoat_enabled = true
ao_enabled = true
refraction_enabled = true
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_d7oxw"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_l8b2n"]
sky_material = SubResource("ProceduralSkyMaterial_d7oxw")

[sub_resource type="Environment" id="Environment_abnra"]
background_mode = 2
sky = SubResource("Sky_l8b2n")
tonemap_mode = 2
ssao_enabled = true
sdfgi_enabled = true
glow_enabled = true

[node name="GameMode" type="Node3D"]
script = ExtResource("1_bliyt")

[node name="WorldObjects" type="Node" parent="."]

[node name="Floor" type="StaticBody3D" parent="WorldObjects"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldObjects/Floor"]
transform = Transform3D(19.8926, 0, 0, 0, -0.0245266, 0, 0, 0, 19.8926, 0, 0, 0)
mesh = SubResource("BoxMesh_r2ywu")
skeleton = NodePath("../CollisionShape3D")
surface_material_override/0 = SubResource("StandardMaterial3D_bliyt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldObjects/Floor"]
shape = SubResource("WorldBoundaryShape3D_x14v3")

[node name="Walls" type="Node" parent="WorldObjects/Floor"]

[node name="Wall" type="CSGBox3D" parent="WorldObjects/Floor/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01472, 1.77466, -9.90484)
use_collision = true
size = Vector3(19.8679, 3.66162, 0.0744629)
material = SubResource("StandardMaterial3D_d7oxw")

[node name="Wall2" type="CSGBox3D" parent="WorldObjects/Floor/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01472, 1.77466, 9.95857)
use_collision = true
size = Vector3(19.8679, 3.66162, 0.0744629)
material = SubResource("StandardMaterial3D_d7oxw")

[node name="Wall3" type="CSGBox3D" parent="WorldObjects/Floor/Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.9164, 1.77466, 0.0551791)
use_collision = true
size = Vector3(19.8679, 3.66162, 0.0744629)
material = SubResource("StandardMaterial3D_d7oxw")

[node name="Wall4" type="CSGBox3D" parent="WorldObjects/Floor/Walls"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.911, 1.77466, 0.0551791)
use_collision = true
size = Vector3(19.8679, 3.66162, 0.0744629)
material = SubResource("StandardMaterial3D_d7oxw")

[node name="Boxes" type="Node" parent="WorldObjects/Floor"]

[node name="Box" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.517136, 0)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box2" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.517136, 0)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box3" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.517136, 0)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box4" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.51714, 0)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box5" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.51714, 0)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box6" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51714, 0)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box7" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0.517136, 1)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box8" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0.517136, 2)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box9" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0.517136, 3)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box10" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 1.51714, 3)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box11" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 1.51714, 2)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="Box12" type="CSGBox3D" parent="WorldObjects/Floor/Boxes"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 1.51714, 1)
use_collision = true
material = SubResource("StandardMaterial3D_l8b2n")

[node name="WorldEnvironment" type="WorldEnvironment" parent="WorldObjects/Floor"]
environment = SubResource("Environment_abnra")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldObjects/Floor"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Label3D" type="Label3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99836, -9.84016)
text = "GameMode (PlayGround)"
font_size = 142

[node name="SpotLight3D" type="SpotLight3D" parent="WorldObjects"]
transform = Transform3D(0.921526, -0.380833, 0.0758622, 0.386791, 0.917515, -0.0925183, -0.0343706, 0.114601, 0.992817, 0, 1.24717, -4.38749)
spot_range = 8.19093
spot_angle = 61.2073

[node name="SpawnPoints" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0218, -6.19973)

[node name="SpawnPoint1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.56169, 0, 0)

[node name="SpawnPoint2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.102142)

[node name="SpawnPoint3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.30116, 0, 10.4345)

[node name="SpawnPoint4" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.52572, 0, 10.4345)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cmov2y6h564hu")
spawn_path = NodePath("..")
spawn_limit = 4

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_d7oxw")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -73.0
offset_right = 128.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.16, 1.16)
pivot_offset = Vector2(128.452, 149.51)

[node name="Continue" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "Continue"

[node name="Settings" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "Settings"

[node name="BackToMenu" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "Back To Menu"

[node name="Quit" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" type="Panel" parent="PauseMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.3875
offset_top = -52.035
offset_right = 82.3875
offset_bottom = 52.035
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.655, 3.655)
pivot_offset = Vector2(80.998, 50.39)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.253
offset_top = -87.0951
offset_right = 203.767
offset_bottom = 139.33
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.44, 0.44)
pivot_offset = Vector2(147.155, 65.355)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 39.85

[node name="ResOptionButton" type="OptionButton" parent="PauseMenu/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="FullScreenCheckButton" type="CheckButton" parent="PauseMenu/SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "FullScreen"

[node name="VsyncCheckBox" type="CheckBox" parent="PauseMenu/SettingsMenu/VBoxContainer"]
layout_mode = 2
tooltip_text = "is a graphics technology designed to synchronize the frame rate output of a computer's graphics card with the refresh rate of the monitor"
text = "Vsync?"
alignment = 2

[node name="Label" type="Label" parent="PauseMenu/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Keyboard and Mouse settings"

[node name="MouseSensitivity" type="VBoxContainer" parent="PauseMenu/SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="PauseMenu/SettingsMenu/VBoxContainer/MouseSensitivity"]
layout_mode = 2
size_flags_horizontal = 0
text = "Sensitivity"
vertical_alignment = 1

[node name="Sensitivity" type="HSlider" parent="PauseMenu/SettingsMenu/VBoxContainer/MouseSensitivity/Text"]
layout_mode = 2
offset_left = 94.285
offset_top = 4.685
offset_right = 365.085
offset_bottom = 20.685
pivot_offset = Vector2(0, 7.37)

[node name="SettingMenuBack" type="Button" parent="PauseMenu/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Back"

[node name="DroppedPistol" parent="." instance=ExtResource("6_l8b2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.76457, 2.38419e-07, -4.10167)

[connection signal="pressed" from="PauseMenu/PauseContainer/Continue" to="PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/PauseContainer/Settings" to="PauseMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/PauseContainer/BackToMenu" to="PauseMenu" method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="PauseMenu/PauseContainer/Quit" to="PauseMenu" method="_on_quit_pressed"]
[connection signal="toggled" from="PauseMenu/SettingsMenu/VBoxContainer/ResOptionButton" to="PauseMenu" method="_on_res_option_button_toggled"]
[connection signal="toggled" from="PauseMenu/SettingsMenu/VBoxContainer/FullScreenCheckButton" to="PauseMenu" method="_on_full_screen_check_button_toggled"]
[connection signal="toggled" from="PauseMenu/SettingsMenu/VBoxContainer/VsyncCheckBox" to="PauseMenu" method="_on_vsync_check_box_toggled"]
[connection signal="changed" from="PauseMenu/SettingsMenu/VBoxContainer/MouseSensitivity/Text/Sensitivity" to="PauseMenu" method="_on_sensitivity_changed"]
[connection signal="pressed" from="PauseMenu/SettingsMenu/VBoxContainer/SettingMenuBack" to="PauseMenu" method="_on_setting_menu_back_pressed"]
